--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,26 +1,32 @@
 ---
 resources:
-- name: resource-web-app
+- name: web-app
   type: git
   source:
-    uri: https://github.com/cloudfoundry-community/simple-go-web-app.git
+    uri: https://github.com/slhommed/spring_task_app.git
+    private_key: {{repo-private-key}}
 
-- name: resource-deploy-web-app
-  type: cf
-  source:
-    api: {{cf-api}}
-    username: {{cf-username}}
-    password: {{cf-password}}
-    organization: {{cf-organization}}
-    space: {{cf-space}}
-    skip_cert_check: true
+#- name: deploy-web-app
+#  type: cf
+#  source:
+#    api: {{cf-api}}
+#  username: {{cf-username}}
+#    password: {{cf-password}}
+#    organization: {{cf-organization}}
+#    space: {{cf-space}}
+#    skip_cert_check: true
 
 jobs:
-- name: job-deploy-app
+- name: build-app
   serial: true
   plan:
-  - {get: resource-web-app, trigger: true}
-  - put: resource-deploy-web-app
-    params:
-      manifest: resource-web-app/manifest.yml
-      path: resource-web-app
+  - get: web-app
+  - task: build-app
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source: {repository: busybox}
+      run:
+        path: web-app/gradlew
+        args: [assemble]
