--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,6 @@ applications:
   no-hostname: true
   buildpack: java_buildpack
   path: ./build/libs/demo-task-0.1.0.jar
-  no-route: true -t 180
-  domain: lhomm.com
+  no-route: true 
+  no-start: true
+  timeout: 180
